--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -8,10 +8,10 @@
     <div class="hidden md:flex items-center h-full">
       <div class="grid md:grid-cols-2 gap-12 items-center w-full h-full">
         <div class="flex flex-col justify-center ">
-            <h1 class="md:text-6xl font-bold">
+            <h1 class="md:text-6xl font-bold leading-tight">
             ¡Somos Asesores Certificados en <span class="text-rp-orange">Seguros Monterrey!</span>
             </h1>
-            <p class="text-xl mb-8">Expertos en protección y tranquilidad para ti y tu familia</p>
+            <p class="text-xl mb-4 md:leading-none  ">Expertos en protección y tranquilidad para ti y tu familia</p>
             <a href="https://api.whatsapp.com/send/?phone=524461354113" target="_blank" class="bg-rp-white text-rp-blue px-8 py-4 rounded-full text-lg font-semibold hover:bg-rp-orange hover:text-white transition duration-300 w-fit inline-block text-center">
             ¿Necesitas asesoría? ¡Hablemos!
             </a>
