--- a/src/components/ModalAd.astro
+++ b/src/components/ModalAd.astro
@@ -23,8 +23,8 @@ const {
   <div class="modal-content">
     <button id="close-modal-btn" class="close-button" aria-label="Cerrar modal">&times;</button>
     <img src={imageUrl} alt={title} class="modal-image" />
-    <h2>{title}</h2>
-    <p>{message}</p>
+    <h2 class="text-black">{title}</h2>
+    <p class="text-black">{message}</p>
     <a href={contactUrl} class="contact-btn">Asesórate</a>
   </div>
 </div>
